--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.4.x",
-    "jade": "*"
+    "jade": "*",
+    "mongodb": "1.3.x",
+    "monk" : "0.7.x"
   }
 }
